# actix-onion-template

./: AGENTS.md  README.md  compose.yml  mise.toml
.cspell/dicts/: project.txt
.github/workflows/: check-rust.yml
app/: Cargo.toml
app/container/: Cargo.toml
app/container/src/: lib.rs
app/domain/: Cargo.toml
app/domain/src/: auth_error.rs  credentials.rs  credentials_repository.rs  lib.rs  user.rs
app/infrastructure/: Cargo.toml
app/infrastructure/src/: credentials_repository.rs  user_repository.rs
app/presentation/: Cargo.toml
app/presentation/src/: auth.rs  health.rs  lib.rs  user.rs
app/seeder/: Cargo.toml
app/seeder/src/: local.rs  main.rs
app/server/: Cargo.toml
app/server/src/: config.rs  main.rs  tracing.rs
app/server/src/middleware/: cors.rs  headers.rs  mod.rs
app/use_case/: Cargo.toml
app/use_case/src/: create_user.rs  get_user.rs  jwt.rs  lib.rs  login.rs  user.rs
db/: atlas.hcl  schema.sql
db/migrations/: 20260222000000_create_users.sql  atlas.sum
db/seeds/: local.sh
docs/: validation.md
mise/tasks/: dev  integration-test  seed
tests/runn/: auth.yml  health.yml  users.yml
