[workspace]
members = [
  "server",
  "domain",
  "use_case",
  "presentation",
  "infrastructure",
]
resolver = "2"

[workspace.dependencies]
actix-cors = "0.7"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
