[workspace]
members = [
  "server",
  "domain",
  "use_case",
  "presentation",
  "infrastructure",
]
resolver = "2"

[workspace.dependencies]
actix-cors = "0.7"
actix-web = "4"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
