[package]
name = "presentation"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
chrono = { workspace = true }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
use_case = { path = "../use_case" }
uuid = { workspace = true }

[dev-dependencies]
