[package]
name = "presentation"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
container = { path = "../container" }
domain = { path = "../domain" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
use_case = { path = "../use_case" }
uuid = { workspace = true }

[dev-dependencies]
