[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix-cors = { workspace = true }
actix-web = { workspace = true }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
presentation = { path = "../presentation" }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
