[package]
name = "use_case"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
garde = { workspace = true }
chrono = { workspace = true }
domain = { path = "../domain" }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
